{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Gameplay",
            "id": "e8aa381d-8e49-4864-837f-abdb2f2158e4",
            "actions": [
                {
                    "name": "MoveLeft",
                    "type": "Value",
                    "id": "2ece196f-f8a9-4975-a37b-bd8f4c9226b3",
                    "expectedControlType": "Stick",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MoveRight",
                    "type": "Value",
                    "id": "feb8230f-827d-42ca-b26b-06148f32eec2",
                    "expectedControlType": "Stick",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "RestartLevel",
                    "type": "Button",
                    "id": "f7790a4f-1019-4e10-bd2d-f123d592076f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "aa4bf37b-8239-4b66-a86c-78a597c2dd68",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a0e0e564-5a74-416f-b0e6-565adb214edf",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e080d8b5-4c03-42cc-99f9-42f7716000be",
                    "path": "<Gamepad>/dpad/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RestartLevel",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}